[package]
name = "pkl"
version = "0.0.0"
edition = "2021"
authors = ["Muhammad Fathir Irhas <mfathirirhas@gmail.com>"]
description = "Apple's Pkl Configuration Language"
license = "MIT"
repository = "https://github.com/mfirhas/pkl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
